Added go up button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container-sobremi" data-aos="flip-left" data-aos-duration="1000">
             <h1 class="h1-sobremi">Sobre mí</h1>
             <p class="descrip-me">
-                Hola! Me llamo <strong>Héctor</strong> y estudie la carrera de Analista programador en Inacap.
+                Hola! Me llamo <strong>Héctor</strong> y estudié la carrera de Analista programador en Inacap.
                 Soy una persona estudiosa, dedicada y responsable,
                 con muchas metas cumplidas y muchas más por cumplir. <br>
                 Me considero una buena persona, amigable, comprensiva,
@@ -97,7 +97,7 @@
     <div id="sec-02">
         <div class="container-knowledge" data-aos="flip-left" data-aos-duration="1000">
             <h1 class="h1-conocimientos">Conocimientos</h1>
-            <p class="description-knowledge">Estoy a punto de terminar mi carrera técnica como <strong>Analista
+            <p class="description-knowledge">Ya terminé mi carrera técnica como <strong>Analista
                     Programador</strong> en Inacap, sin embargo, constantemente
                 estoy estudiando de manera autodidacta en la plataforma <strong>Udemy</strong>. Actualmente me encuentro
                 realizando un curso de <strong>React</strong>
@@ -178,6 +178,13 @@
                 </div>
             </div>
         </form>
+    </div>
+
+    <!-- Boton subir -->
+    <div class="up-div">
+        <div class="up-button">
+            <i class="fas fa-chevron-up"></i>
+        </div>
     </div>
 
 
