Added some styles and fixed the animations

--- a/gracias.html
+++ b/gracias.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<div class="modal fade" tabindex="-1" id="myModal" data-bs-keyboard="false" data-bs-backdrop="static" aria-labelledby="myModallLabel" aria-hidden="true" role="dialog">
+	<div class="modal fade" tabindex="-1" id="myModal" -bs-keyboard="false" -bs-backdrop="static" aria-labelledby="myModallLabel" aria-hidden="true" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -27,7 +27,7 @@
 					<p class="text-dark">El mensaje fue enviado exitosamente !</p>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-warning" data-bs-dismiss="modal" role="link"
+					<button type="button" class="btn btn-warning" -bs-dismiss="modal" role="link"
 						onclick="window.location='index.html'">Volver</button>
 				</div>
 			</div>
