Fixed gracias page, deleted bootstrap and add an animation

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 
     <!-- FOOTER -->
-    <div class="footer-basic mt-5">
+    <div class="footer-basic">
         <footer>
             <div class="social-footer">
                 <a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
@@ -216,6 +216,5 @@
     AOS.init();
 </script>
 <script src="js/matrix.js"></script>
-</body>
 
 </html>
