--- a/gracias.html
+++ b/gracias.html
@@ -1,41 +1,40 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-	<link rel="stylesheet" href="css/styles.css">
-	<!-- Fonts -->
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="preogramador web y movil">
+    <meta name="description" content="programador junior backend con conocimientos en desarrollo web y móvil ">
+    <meta name="author" content="Hector Valdes M">
+    <meta name="robots" content="index, nofollow">
+    <meta http-equiv="content-type" content="text/html;UTF-8">
+    <meta http-equiv="content-language" content="es">
+    <link rel="stylesheet" href="css/styles.css">
 
-	<link rel="icon" type="image/png" href="img/logo cuadrado.png">
-	<title> Correo enviado </title>
+    <link rel="icon" type="image/png" href="img/logo cuadrado.png">
+    <title> Portafolio </title>
 </head>
 
 <body>
-	<div class="modal fade" tabindex="-1" id="myModal" -bs-keyboard="false" -bs-backdrop="static" aria-labelledby="myModallLabel" aria-hidden="true" role="dialog">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title">Felicidades !</h5>
-				</div>
-				<div class="modal-body">
-					<p class="text-dark">El mensaje fue enviado exitosamente !</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-warning" -bs-dismiss="modal" role="link"
-						onclick="window.location='index.html'">Volver</button>
-				</div>
-			</div>
-		</div>
-	</div>
+   
 
-	<!-- FOOTER -->
-    <div class="footer-basic mt-5">
+    <!-- gracias -->
+    <div class="caja-gracias">
+            <h1 class="tittle">Gracias por contactarte !</h1>
+            <div class="btn-volver">
+                <a href="index.html"  rel="noopener noreferrer"><input
+                        type="button" class="btn btn-warning" value="Volver" /></a>				
+            </div>
+			<div class="img-pato">
+				<img src="/img/XOsX.gif" alt="gif animado pato caminando" >
+			</div>
+    </div>
+
+
+
+    <!-- FOOTER -->
+    <div class="footer-basic">
         <footer>
             <div class="social-footer">
                 <a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
@@ -43,20 +42,10 @@
                 <a href="https://www.twitter.com/Mushroom0047"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.github.com/Mushroom0047"><i class="fab fa-github"></i></a>
             </div>
-            <p class="copyright">HectorValdesM. All rights reserved.</p>
+            <p class="copyright">&#169;Copyright 2021 HectorValdesM. All rights reserved.</p>
         </footer>
     </div>
 
-	<script>
-		window.onload = () => {
-			$('#myModal').modal('show');
-		};
-	</script>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-		crossorigin="anonymous"></script>
-	<script src="https://kit.fontawesome.com/be94f8a50b.js" crossorigin="anonymous"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
+<script src="https://kit.fontawesome.com/be94f8a50b.js" crossorigin="anonymous"></script>
 </html>
