Fixed the loading effect and some details in footer

--- a/gracias.html
+++ b/gracias.html
@@ -21,20 +21,17 @@
 
     <!-- gracias -->
     <div class="caja-gracias">
-            <h1 class="tittle">Gracias por contactarte !</h1>
+            <h1 class="tittle-gracias">Formulario enviado !</h1>
             <div class="btn-volver">
                 <a href="index.html"  rel="noopener noreferrer"><input
                         type="button" class="btn btn-warning" value="Volver" /></a>				
             </div>
-			<div class="img-pato">
-				<img src="/img/XOsX.gif" alt="gif animado pato caminando" >
-			</div>
     </div>
 
 
 
     <!-- FOOTER -->
-    <div class="footer-basic">
+    <div class="footer-basic footer-absolute">
         <footer>
             <div class="social-footer">
                 <a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
