--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="tec" data-aos="zoom-in" data-aos-duration="1000">
                     <p class="text-center">Otros</p>
-                    <p class="knowledge-item"><i class="fas fa-base"></i>Base de Datos SQL</p>
+                    <p class="knowledge-item"><i class="fas fa-database"></i>Base de Datos SQL</p>
                     <p class="knowledge-item"><i class="fab fa-git"></i>Control de versiones</p>
                     <p class="knowledge-item"><i class="fab fa-android"></i>Android Studio</p>
                 </div>
