Changed image of me and fixed some styles in proyects

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 Mi Hobbie son los videojuegos sobre todos los independientes,
                 también me encanta estudiar y tocar guitarra eléctrica, siempre estoy buscando alguna nueva
                 tecnología o reforzando lo aprendido.</p>
-            <img class="image-me" src="img/Imagen1.png" alt="foto de mi mismisimo">
+            <img class="image-me" src="img/myPhoto.jpeg" alt="foto de mi mismisimo">
             <p>Puedes descargar mí curriculum acá</p>
             <div class="btn-download">
                 <a href="cv/HectorValdes-AnalistaProgramador.pdf" target="_blank" rel="noopener noreferrer"><input
