Adding links to my new blog

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     <a class="nav-link" href="#sec-03">Proyectos</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#sec-blog">Blog !</a>
+                </li>
+                <li class="nav-item">
                     <a href="#sec-04" class="nav-link">Contacto</a>
                 </li>
             </ul>
@@ -153,6 +156,29 @@
             </div>
         <div class="trabajos-down"><div class="trabajos-radius-down"></div></div>
     </div>
+
+<!-- Blog -->
+    <hr id="hr_separation">
+<div id="sec-blog">
+    <div class="container-knowledge" data-aos="fade-up" data-aos-duration="1000">
+        <h1 class="h1-conocimientos">Blog !</h1>
+        <p class="description-knowledge">
+            Con el fin de mejorar mis habilidades en <strong>Wordpress</strong> y compartir las cosas que me gustan, decidí 
+            crear mi blog personal.
+<br>
+            En estr blog encontraras una variedad de contenido, <strong>Reviews de juegos</strong> , <strong>tips de Programación</strong>, <strong>dibujos</strong> y todo lo que se me ocurra ponerle. 
+            <img class="image-me" src="img/blog.png" alt="Imagen referencial de mi blog">
+            <br>            
+            <div class="btn-download text-center">
+                <p>Puedes revisarlo acá</p>
+                <a href="https://blog.hectorvaldesm.com/" target="_blank" rel="noopener noreferrer"><input
+                        type="button" class="btn btn-warning" value="Mushroom Blog !" /></a>
+            </div>
+        </p>
+    </div>
+</div>
+
+
     <hr id="hr_separation">
     <!-- contacto -->
     <div id="sec-04" data-aos="fade-up" data-aos-duration="1000">
