Ready all styles modifications

--- a/gracias.html
+++ b/gracias.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, nofollow">
     <meta http-equiv="content-type" content="text/html;UTF-8">
     <meta http-equiv="content-language" content="es">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="scss/styles.css">
 
     <link rel="icon" type="image/png" href="img/logo cuadrado.png">
     <title> Portafolio </title>
@@ -34,12 +34,12 @@
     <div class="footer-basic footer-absolute">
         <footer>
             <div class="social-footer">
-                <a href="https://www.instagram.com/hectorvaldesm/"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/h%C3%A9ctor-vald%C3%A9s-m"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://www.twitter.com/Mushroom0047"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.github.com/Mushroom0047"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/mushroom.47/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/h%C3%A9ctor-vald%C3%A9s-m" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.twitter.com/Mushroom0047" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.github.com/Mushroom0047" target="_blank"><i class="fab fa-github"></i></a>
             </div>
-            <p class="copyright">&#169;Copyright 2021 HectorValdesM. All rights reserved.</p>
+            <p class="copyright">&#169;Copyright 2021 HectorValdesM. All rights reserved. 🍄</p>
         </footer>
     </div>
 
