Changes in styles

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!-- Cuadro de conocimientos -->
         <div class="knowledge-father" data-aos="zoom-in" data-aos-duration="1000">
             <div class="web">
-                <p class="text-center">Diseño Web</p>
+                <p class="text-center"><strong>Diseño Web</strong></p>
                 <hr>
                 <p class="knowledge-item"><i class="fab fa-html5"></i>HTML</p>
                 <p class="knowledge-item"><i class="fab fa-css3-alt"></i>CSS</p>
@@ -137,14 +137,14 @@
                 </p>
             </div>
             <div class="progra" data-aos="zoom-in" data-aos-duration="1000">
-                <p class="text-center">Lenguajes de Programación</p>
+                <p class="text-center"><strong>Lenguajes de Programación</strong></p>
                 <hr>
                 <p class="knowledge-item"><i class="fab fa-java"></i>Java</p>
                 <p class="knowledge-item"><i class="fas fa-code"></i>C#</p>
                 <p class="knowledge-item"><i class="fab fa-js"></i>JavaScript</p>
             </div>
             <div class="tec" data-aos="zoom-in" data-aos-duration="1000">
-                <p class="text-center">Herramientas</p>
+                <p class="text-center"><strong>Herramientas</strong></p>
                 <hr>
                 <p class="knowledge-item">
                     <i class="fas fa-database"></i>Base de Datos SQL
@@ -157,7 +157,7 @@
                 </p>
             </div>
             <div class="games" data-aos="zoom-in" data-aos-duration="1000">
-                <p class="text-center">Programación de videojuegos</p>
+                <p class="text-center"><strong>Programación de videojuegos</strong></p>
                 <hr>
                 <p class="knowledge-item">
                     <i class="fas fa-gamepad"></i>Game Maker Studio 2
@@ -179,7 +179,7 @@
                 practicar con <strong>JavaScript</strong>, juegos para pc
                 y algunas modificaciones/creaciones en páginas de
                 Wordpress para la empresa DesignSeo
-                pero pronto ire subiendo más cosas. <br /><br />
+                pero pronto iré subiendo más cosas. <br /><br />
             </p>
             <span><i id="spin1" class="fas fa-cog"></i><i id="spin2" class="fas fa-cog"></i></span>
             <div class="images-portfolio">
@@ -230,7 +230,7 @@
                     con un diseño único, diferente y adaptado a tu presupuesto. <br>
                 </p><br>
                 <div class="btn-download text-center">
-                    <p>Visitanos en el siguiente enlace</p><br>
+                    <p>Visítenos en el siguiente enlace</p><br>
                     <a href="https://hectorvaldesm.com/servicio-web/" target="_blank" rel="noopener noreferrer"><input
                             type="button" class="btn btn-web" value="Conocer más" /></a>
                 </div>
